# GraphBox

./: CMakeLists.txt  FileManager.cpp  FileManager.h  GraphBox.cpp  GraphBox.h  GraphState.cpp  GraphState.h  IClickable.h  InputHelper.cpp  InputHelper.h  ModeHandler.cpp  ModeHandler.h  PhysicsEngine.cpp  PhysicsEngine.h  README.md  Single.cpp  Single.h  Slider.cpp  Slider.h  ViewRenderer.cpp  ViewRenderer.h
graph/: GraphData.cpp  GraphData.h  GraphState.cpp  GraphState.h  Node.h
helper/: InputHelper.cpp  InputHelper.h  Maths.h  ViewHelper.cpp  ViewHelper.h
option_types/: Checkbox.cpp  Checkbox.h  OptionType.h  Slider.cpp  Slider.h
rendering/: Renderer.cpp  Renderer.h  ViewRenderer.cpp  ViewRenderer.h
